--- a/public/gerenciar.html
+++ b/public/gerenciar.html
@@ -751,7 +751,7 @@
                     
                     // SEGUNDO: Usar verifyBeforeUpdateEmail (método recomendado pelo Firebase)
                     const actionCodeSettings = {
-                        url: 'https://prod-ai-teste.vercel.app/gerenciar.html',
+                        url: 'https://soundyai-app-production.up.railway.app//gerenciar.html',
                         handleCodeInApp: true
                     };
                     
