--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>SoundyAI - Mentor Virtual</title>
-    <link rel="stylesheet" href="style.css?v=20250810">
+        <link rel="stylesheet" href="style.css">
+    <!-- ✅ CORREÇÃO: CSS para valores não disponíveis - eliminar confusão com fictícios -->
+    <link rel="stylesheet" href="no-fallbacks.css">
     <link rel="stylesheet" href="audio-analyzer.css?v=20250810">
     <link rel="stylesheet" href="music-button-below-chat.css?v=20250810">
     <link rel="stylesheet" href="friendly-labels.css?v=20250817">
