--- a/public/index.html
+++ b/public/index.html
@@ -394,6 +394,8 @@
     <!-- Opcional: o integrador possui fallback inline; permita rede setando window.REFS_ALLOW_NETWORK=true antes do load -->
     <script src="refs/embedded-refs-new.js?v=20250829-true-peak-fix&timestamp=1756500921" defer></script>
     <script src="suggestion-text-generator.js?v=20250815" defer></script>
+    <!-- 🚨 SISTEMA DE EMERGÊNCIA - SUGESTÕES FUNCIONAIS -->
+    <script src="suggestion-system-emergency.js?v=emergency-20250920" defer></script>
     <script src="audio-analyzer-integration.js?v=20250823k&final_fix=1724440500" defer></script>
     
     <!-- Inicializar Audio Analyzer -->
