--- a/public/index.html
+++ b/public/index.html
@@ -393,6 +393,11 @@
     <script src="cache-context-aware-v1.js?v=20250829-ctx-aware" defer></script>
     <!-- Opcional: o integrador possui fallback inline; permita rede setando window.REFS_ALLOW_NETWORK=true antes do load -->
     <script src="refs/embedded-refs-new.js?v=20250829-true-peak-fix&timestamp=1756500921" defer></script>
+    
+    <!-- 🎯 SISTEMA DE SUGESTÕES MELHORADO - DEPENDÊNCIAS ESSENCIAIS -->
+    <script src="suggestion-scorer.js?v=20250920-enhanced" defer></script>
+    <script src="enhanced-suggestion-engine.js?v=20250920-enhanced" defer></script>
+    
     <script src="suggestion-text-generator.js?v=20250815" defer></script>
     <!-- 🚨 SISTEMA DE EMERGÊNCIA - SUGESTÕES FUNCIONAIS -->
     <script src="suggestion-system-emergency.js?v=emergency-20250920" defer></script>
