--- a/public/index.html
+++ b/public/index.html
@@ -494,6 +494,7 @@
     <script src="ai-configuration-manager.js?v=20250922-config" defer></script>
     <script src="ai-suggestion-ui-controller.js?v=20250922-ui" defer></script>
     <script src="ai-suggestion-system-tester.js?v=20250922-test" defer></script>
+    <script src="ai-force-test.js?v=20250922-force" defer></script>
     
     <!-- 🎯 ATIVAÇÃO FORÇADA DO SISTEMA NOVO -->
     <script>
