--- a/public/index.html
+++ b/public/index.html
@@ -495,6 +495,8 @@
     <script src="ai-suggestion-ui-controller.js?v=20250922-ui" defer></script>
     <script src="ai-suggestion-system-tester.js?v=20250922-test" defer></script>
     <script src="ai-force-test.js?v=20250922-force" defer></script>
+    <script src="ai-auto-config.js?v=20250922-autoconfig" defer></script>
+    <script src="api-key-config.js?v=20250922-keyconfig" defer></script>
     
     <!-- 🎯 ATIVAÇÃO FORÇADA DO SISTEMA NOVO -->
     <script>
