feat: sistema IA completo + configuração segura
 PROBLEMA PRINCIPAL RESOLVIDO:
- Interface IA aparece SEMPRE após análise (independente de API Key)
- Força chamada em audio-analyzer-integration.js linha ~2125

 SEGURANÇA IMPLEMENTADA:
- secure-api-loader.js para carregamento seguro de API Keys
- Múltiplas fontes seguras (localStorage, sessionStorage, etc)
- Sem exposição de chaves reais no código
- Sistema funciona em modo demo sem API Key

 FUNCIONALIDADES IA:
- ai-suggestion-layer.js (19KB) - processamento IA
- ai-configuration-manager.js (19KB) - gerência config
- ai-suggestion-ui-controller.js (29KB) - interface
- ai-auto-config.js (6KB) - auto-configuração
- secure-api-loader.js (2KB) - carregamento seguro

 TESTE: Carregue uma música  Interface IA aparece automaticamente

--- a/public/index.html
+++ b/public/index.html
@@ -496,7 +496,7 @@
     <script src="ai-suggestion-system-tester.js?v=20250922-test" defer></script>
     <script src="ai-force-test.js?v=20250922-force" defer></script>
     <script src="ai-auto-config.js?v=20250922-autoconfig" defer></script>
-    <script src="api-key-config.js?v=20250922-keyconfig" defer></script>
+    <script src="secure-api-loader.js?v=20250922-secure" defer></script>
     
     <!-- 🎯 ATIVAÇÃO FORÇADA DO SISTEMA NOVO -->
     <script>
