--- a/test-real-flow.html
+++ b/test-real-flow.html
@@ -68,7 +68,8 @@
         <div id="output" class="output">🔄 Aguardando teste...</div>
     </div>
 
-    <!-- Scripts necessários -->
+    <!-- Scripts necessários - ordem de dependências -->
+    <script src="public/suggestion-scorer.js"></script>
     <script src="public/enhanced-suggestion-engine.js"></script>
     <script src="public/ai-suggestion-ui-controller.js"></script>
 
