--- a/test-simple.html
+++ b/test-simple.html
@@ -60,7 +60,8 @@
         <div id="output" class="output">🔄 Pronto para testar...</div>
     </div>
 
-    <!-- Scripts necessários -->
+    <!-- Scripts necessários - ordem de dependências -->
+    <script src="public/suggestion-scorer.js"></script>
     <script src="public/enhanced-suggestion-engine.js"></script>
     <script src="public/ai-suggestion-ui-controller.js"></script>
 
@@ -221,10 +222,21 @@
 
         // Auto-start
         window.addEventListener('load', () => {
+            // Aguardar mais tempo para carregar os scripts
             setTimeout(() => {
                 log('🔄 Sistema carregado!', 'success');
+                
+                // Verificar se os scripts carregaram
+                const scripts = Array.from(document.scripts);
+                log(`📄 Scripts encontrados: ${scripts.length}`, 'info');
+                scripts.forEach(script => {
+                    if (script.src) {
+                        log(`   - ${script.src}`, 'info');
+                    }
+                });
+                
                 testComponents();
-            }, 1000);
+            }, 2000); // Aumentei o tempo para 2 segundos
         });
     </script>
 </body>
