--- a/public/index.html
+++ b/public/index.html
@@ -523,8 +523,8 @@
     <!-- 🔍 VALIDADOR DE INTEGRAÇÃO DO SISTEMA ULTRA-AVANÇADO -->
     <script src="validador-integracao-ultra-avancado.js?v=20250920-validator" defer></script>
     
-    <!-- ❌ DESABILITADO: Monitor causando conflitos -->
-    <!-- <script src="monitor-modal-ultra-avancado.js?v=20250920-monitor" defer></script> -->
+    <!-- 🎯 MONITOR MODAL - Detecta e valida sistema ultra-avançado durante análises -->
+    <script src="monitor-modal-ultra-avancado.js?v=20250920-monitor" defer></script>
     
     <script src="suggestion-text-generator.js?v=20250815" defer></script>
     <!-- 🚨 SISTEMA DE EMERGÊNCIA - SUGESTÕES FUNCIONAIS -->
@@ -534,8 +534,7 @@
     <script src="ai-suggestion-layer.js?v=20250922-ai-layer" defer></script>
     <script src="ai-configuration-manager.js?v=20250922-config" defer></script>
     <script src="ai-suggestion-ui-controller.js?v=20250922-ui" defer></script>
-    <!-- ❌ DESABILITADO: Integração IA causando loop infinito -->
-    <!-- <script src="ai-suggestions-integration.js?v=20250922-integration" defer></script> -->
+    <script src="ai-suggestions-integration.js?v=20250922-integration" defer></script>
     <script src="ai-suggestion-system-tester.js?v=20250922-test" defer></script>
     <script src="ai-force-test.js?v=20250922-force" defer></script>
     <script src="ai-auto-config.js?v=20250922-autoconfig" defer></script>
