--- a/public/index.html
+++ b/public/index.html
@@ -534,7 +534,7 @@
     <script src="ai-suggestion-layer.js?v=20250922-ai-layer" defer></script>
     <script src="ai-configuration-manager.js?v=20250922-config" defer></script>
     <script src="ai-suggestion-ui-controller.js?v=20250922-ui" defer></script>
-    <script src="ai-suggestions-integration.js?v=20250922-integration" defer></script>
+    <script src="ai-suggestions-integration.js?v=20250922-integration-fixed" defer></script>
     <script src="ai-suggestion-system-tester.js?v=20250922-test" defer></script>
     <script src="ai-force-test.js?v=20250922-force" defer></script>
     <script src="ai-auto-config.js?v=20250922-autoconfig" defer></script>
