tabela sem valores3 emoji

--- a/teste-sem-valores-numericos.html
+++ b/teste-sem-valores-numericos.html
@@ -182,10 +182,7 @@
             }
             
             return `<td class="${cssClass}" style="text-align: center; padding: 8px;">
-                <div style="display: flex; flex-direction: column; align-items: center; gap: 2px;">
-                    <div style="font-size: 16px;">${statusIcon}</div>
-                    <div style="font-size: 11px; font-weight: 500; opacity: 0.9;">${statusText}</div>
-                </div>
+                <div style="font-size: 12px; font-weight: 600;">${statusText}</div>
             </td>`;
         }
         
