--- a/public/index.html
+++ b/public/index.html
@@ -963,5 +963,8 @@
     
     <!-- 🎯 BAND WEIGHTED SCORE V2 - Correção Inteligente de Score -->
     <script src="band-weighted-score-v2.js?v=20250131" defer></script>
+    
+    <!-- 🔍 DEBUG: Diagnóstico das sugestões de IA -->
+    <script src="../debug-ai-suggestions.js"></script>
 </body>
 </html>
