--- a/public/landing.html
+++ b/public/landing.html
@@ -1026,18 +1026,18 @@
         <div class="cards-container">
             <div class="glass-card scroll-reveal">
                 <div class="card-icon">🤖</div>
-                <h3 class="card-title">Inteligência Artificial</h3>
-                <p class="card-description">Seu mentor online 24 horas, tire dúvidas e receba orientações instantâneas com um assistente inteligente treinado 100% para produção musical.</p>
+                <h3 class="card-title">Análise musical com IA</h3>
+                <p class="card-description">Diagnísticos completos do seu áudio, analise sua faixa e receba sugestões reais de melhorias.</p>
             </div>
             <div class="glass-card scroll-reveal">
                 <div class="card-icon">💬</div>
-                <h3 class="card-title">Chat Personalizado</h3>
-                <p class="card-description">Respostas inteligentes adaptadas ao seu perfil técnico. A IA vai te conhecer melhor para oferecer soluções mais precisas</p>
+                <h3 class="card-title">Chat Bot de IA</h3>
+                <p class="card-description">Seu mentor online 24 horas, tire dúvidas e receba orientações instantâneas com um assistente inteligente treinado 100% para produção musical</p>
             </div>
             <div class="glass-card scroll-reveal">
                 <div class="card-icon">🧠</div>
-                <h3 class="card-title">Melhore seus resultados</h3>
-                <p class="card-description">Otimize arranjos, mixagem e fluxo criativo com sugestões avançadas.</p>
+                <h3 class="card-title">Chat personalizado</h3>
+                <p class="card-description">Respostas inteligentes adaptadas ao seu perfil técnico. A IA vai te conhecer melhor para oferecer soluções mais precisas.</p>
             </div>
         </div>
     </section>
