--- a/public/landing.html
+++ b/public/landing.html
@@ -1027,7 +1027,7 @@
             <div class="glass-card scroll-reveal">
                 <div class="card-icon">🤖</div>
                 <h3 class="card-title">Análise musical com IA</h3>
-                <p class="card-description">Diagnísticos completos do seu áudio, analise sua faixa e receba sugestões reais de melhorias.</p>
+                <p class="card-description">Diagnósticos completos do seu áudio, analise sua faixa e receba sugestões reais de melhorias.</p>
             </div>
             <div class="glass-card scroll-reveal">
                 <div class="card-icon">💬</div>
