--- a/public/landing.html
+++ b/public/landing.html
@@ -1090,8 +1090,10 @@
                 <div class="instruction-item">
                     <div class="instruction-number">2</div>
                     <p class="instruction-text">
-                        <span class="instruction-highlight">Quanto mais você ser específico, melhor será sua resposta.</span>  
-                        Exemplo: "Como criar sidechain no FL Studio usando Fruity Limiter? Quero aplicar o sidechain no kick e no bass. sem perder força no kick"
+                        <span class="instruction-highlight">Use as métricas como guia.</span>  
+                        As métricas e sugestões são baseadas em ciência de áudio e referências reais do gênero.
+Porém, música é arte: cada produtor pode querer características diferentes.
+Use estas dicas como um guia de referência, não como uma regra absoluta.
                     </p>
                 </div>
                 
