--- a/teste-tabela-referencia-bandas.html
+++ b/teste-tabela-referencia-bandas.html
@@ -219,6 +219,7 @@
             const bandDisplayNames = {
                 sub: 'Sub (20-60Hz)',
                 bass: 'Bass (60-150Hz)', 
+                low_bass: 'Bass (60-150Hz)',
                 lowMid: 'Low-Mid (150-500Hz)',
                 low_mid: 'Low-Mid (150-500Hz)',
                 mid: 'Mid (500-2kHz)',
