--- a/public/index.html
+++ b/public/index.html
@@ -90,10 +90,10 @@
         console.log('💡 Execute no console: testarSistemaUnificado()');
     </script>
     
-    <!-- 🎯 Sistema Unificado Status/Sugestão V1 (SEM DEFER para carregamento imediato) -->
+    <!-- 🎯 Sistema Unificado Status/Sugestão V1 (COM DEFER para carregamento após sistema pronto) -->
     <script src="/status-suggestion-unified-v1.js?v=20250829"></script>
     <script src="/status-migration-v1.js?v=20250829"></script>
-    <script src="/force-unified-activation.js?v=20250829"></script>
+    <script src="/force-unified-activation.js?v=20250829" defer></script>
     <script src="/auto-validator-unified.js?v=20250829" defer></script>
     
     <!-- 🛡️ TONAL BALANCE SAFE V1 - Sistema seguro para bandas espectrais -->
