--- a/public/test-force-activator-fix.html
+++ b/public/test-force-activator-fix.html
@@ -10,11 +10,13 @@
     <p>Abra o console (F12) e observe os logs:</p>
     
     <div id="log-container">
-        <h3>Logs esperados (em ordem):</h3>
+        <h3>Logs esperados (em ordem correta):</h3>
         <ol>
             <li>⏳ ForceActivator adiado: sistema ainda não está pronto.</li>
             <li>🎵 Audio Analyzer Integration carregada com sucesso!</li>
-            <li>🚀 [GLOBAL] analysisReady disparado - sistema pronto para ForceActivator</li>
+            <li>⏳ [READY-CHECK] Estado atual: {audioAnalyzer: true, CACHE_CTX_AWARE_V1_API: true, refsReady: false}</li>
+            <li>⏳ [READY-CHECK] Estado atual: {audioAnalyzer: true, CACHE_CTX_AWARE_V1_API: true, refsReady: true}</li>
+            <li>✅ [GLOBAL] Todos os sistemas prontos. Disparando analysisReady...</li>
             <li>✅ ForceActivator executado após sistema pronto (analysisReady).</li>
         </ol>
     </div>
@@ -23,16 +25,42 @@
     <button onclick="console.clear()">🧹 Limpar Console</button>
 
     <script>
-        // Simular sistemas que deveriam estar prontos
+        // Simular sequência de carregamento realista dos sistemas
         setTimeout(() => {
-            console.log("🔧 [TEST] Simulando sistemas prontos...");
+            console.log("🔧 [TEST] Simulando AudioAnalyzer pronto...");
             window.audioAnalyzer = { ready: true };
+        }, 1000);
+
+        setTimeout(() => {
+            console.log("🔧 [TEST] Simulando CACHE_CTX_AWARE_V1_API pronto...");
             window.CACHE_CTX_AWARE_V1_API = { ready: true };
+        }, 1500);
+
+        setTimeout(() => {
+            console.log("🔧 [TEST] Simulando refsReady...");
             window.refsReady = true;
+            // Simular função applyGenreSelection que deveria existir
+            window.applyGenreSelection = function(genre) {
+                console.log("✅ [TEST] applyGenreSelection chamada com:", genre);
+            };
             
-            // Disparar evento analysisReady manualmente para teste
-            const evt = new Event("analysisReady");
-            document.dispatchEvent(evt);
+            // Simular o disparo do waitForRefsAndCacheBeforeReady para teste
+            console.log("🔧 [TEST] Simulando chamada de waitForRefsAndCacheBeforeReady...");
+            if (window.waitForRefsAndCacheBeforeReady) {
+                window.waitForRefsAndCacheBeforeReady();
+            } else {
+                // Simular o comportamento da função se não existir
+                setTimeout(() => {
+                    console.log("⏳ [READY-CHECK] Estado atual:", {
+                        audioAnalyzer: !!window.audioAnalyzer,
+                        CACHE_CTX_AWARE_V1_API: !!window.CACHE_CTX_AWARE_V1_API,
+                        refsReady: !!window.refsReady
+                    });
+                    console.log("✅ [GLOBAL] Todos os sistemas prontos. Disparando analysisReady...");
+                    const evt = new Event("analysisReady");
+                    document.dispatchEvent(evt);
+                }, 100);
+            }
         }, 2000);
 
         function testForceActivator() {
