--- a/public/index.html
+++ b/public/index.html
@@ -416,6 +416,10 @@
                     </div>
                 </div>
 
+                <div class="analysis-helper-text">
+                    💡 Se precisar de ajuda para aplicar as melhorias, clique em <strong>"Pedir ajuda à IA"</strong> e seja redirecionado para um Chat Bot especialista em áudio.
+                </div>
+
                 <div class="analysis-actions">
                     <button class="action-btn primary" onclick="sendModalAnalysisToChat()">
                         🤖 Pedir Ajuda à IA
