--- a/public/index.html
+++ b/public/index.html
@@ -341,6 +341,7 @@
                         Escolher Arquivo
                     </label>
                 </div>
+                <button class="audio-close-bottom" onclick="closeAudioModal()">Fechar</button>
             </div>
 
             <!-- Loading -->
@@ -350,6 +351,7 @@
                 <div class="progress-bar">
                     <div class="progress-fill" id="audioProgressFill"></div>
                 </div>
+                <button class="audio-close-bottom" onclick="closeAudioModal()" style="margin-top: 30px;">Fechar</button>
             </div>
 
             <!-- Results -->
