--- a/public/index.html
+++ b/public/index.html
@@ -357,7 +357,7 @@
             <!-- Results -->
             <div id="audioAnalysisResults" class="audio-results" style="display: none;">
                 <div class="results-header">
-                    <h4>🔬 Análise Completa</h4>
+                    <h4>Análise Completa</h4>
                 </div>
                 
                 <div class="analysis-info-text">
