--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
     <title>SoundyAI - Mentor Virtual</title>
     <link rel="stylesheet" href="style.css?v=20250810">
     <link rel="stylesheet" href="audio-analyzer.css?v=20250810">
+    <link rel="stylesheet" href="audio-analyzer-responsive-breakpoints.css?v=20251012">
     <link rel="stylesheet" href="music-button-below-chat.css?v=20250810">
     <link rel="stylesheet" href="friendly-labels.css?v=20250817">
     <link rel="stylesheet" href="image-upload-styles.css?v=20241219">
     <link rel="stylesheet" href="ultra-advanced-styles.css?v=20250920-ultra">
     <link rel="stylesheet" href="ai-suggestion-styles.css?v=20250922-ai-layer">
-    <link rel="stylesheet" href="ai-suggestions-expanded.css?v=20250922-expanded">>
+    <link rel="stylesheet" href="ai-suggestions-expanded.css?v=20250922-expanded">
     
     <!-- Fontes otimizadas -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
