--- a/public/index.html
+++ b/public/index.html
@@ -348,6 +348,7 @@
                     <option value="funk_mandela">Funk Mandela</option>
                     <option value="funk_bruxaria">Funk Bruxaria</option>
                     <option value="funk_automotivo">Funk Automotivo</option>
+                    <option value="funk_bh">Funk BH</option>
                     <option value="eletronico">Eletrônico</option>
                 </select>
                 <span id="audioRefStatus" style="font-size:11px;padding:2px 6px;border-radius:4px;background:#1f2b40;opacity:.9;">Carregando referências...</span>
@@ -491,6 +492,10 @@
                 <button class="genre-card" data-genre="funk_automotivo">
                     <span class="genre-icon">🚗</span>
                     <span class="genre-name">Funk Automotivo</span>
+                </button>
+                <button class="genre-card" data-genre="funk_bh">
+                    <span class="genre-icon">⛰️</span>
+                    <span class="genre-name">Funk BH</span>
                 </button>
                 <button class="genre-card" data-genre="funk_bruxaria">
                     <span class="genre-icon">🔮</span>
