--- a/public/index.html
+++ b/public/index.html
@@ -395,7 +395,7 @@
                 <div class="progress-bar">
                     <div class="progress-fill" id="audioProgressFill"></div>
                 </div>
-                <button class="audio-close-bottom" onclick="closeAudioModal()" style="margin-top: 30px;">Fechar</button>
+                <button class="audio-close-bottom" onclick="closeAudioModal()">Fechar</button>
             </div>
 
             <!-- Results -->
