--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="image-upload-styles.css?v=20241219">
     <link rel="stylesheet" href="ultra-advanced-styles.css?v=20250920-ultra">
     <link rel="stylesheet" href="ai-suggestion-styles.css?v=20250922-ai-layer">
-    <link rel="stylesheet" href="ai-suggestions-expanded.css?v=20250922-expanded">>
+    <link rel="stylesheet" href="ai-suggestions-expanded.css?v=20250922-expanded">
+    <link rel="stylesheet" href="ai-suggestions-futuristic.css?v=20250923-cyberpunk">
     
     <!-- Fontes otimizadas -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
