--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>SoundyAI - Mentor Virtual</title>
     <link rel="stylesheet" href="style.css?v=20250810">
-    <link rel="stylesheet" href="audio-analyzer.css?v=20250810">
+    <link rel="stylesheet" href="audio-analyzer.css?v=20251024-titles">
     <link rel="stylesheet" href="music-button-below-chat.css?v=20250810">
     <link rel="stylesheet" href="friendly-labels.css?v=20250817">
     <link rel="stylesheet" href="image-upload-styles.css?v=20241219">
@@ -1062,5 +1062,8 @@
     
     <!-- 🧪 VERIFICAÇÃO: Modal de Gênero Musical -->
     <script src="verify-genre-modal.js" defer></script>
+    
+    <!-- 🔍 VERIFICAÇÃO: Títulos dos Cards -->
+    <script src="verify-card-titles.js" defer></script>
 </body>
 </html>
