--- a/public/analise-compatibilidade-json.html
+++ b/public/analise-compatibilidade-json.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+<head>f
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🔍 Análise de Compatibilidade JSON - SoundyAI</title>
