fix: Desabilitar interceptador + Force cache bust com timestamp dinâmico

--- a/public/index.html
+++ b/public/index.html
@@ -689,7 +689,7 @@
             forceActivate();
         });
     </script>
-    <script src="audio-analyzer-integration.js?v=20250823k&final_fix=1724440500" defer></script>
+    <script src="audio-analyzer-integration.js?v=20251103_CRITICAL_FIX&ts=<?php echo time(); ?>" defer></script>
     
     <!-- Inicializar Audio Analyzer -->
     <script>
