--- a/public/index.html
+++ b/public/index.html
@@ -689,7 +689,7 @@
             forceActivate();
         });
     </script>
-    <script src="audio-analyzer-integration.js?v=20251103_CRITICAL_FIX&ts=<?php echo time(); ?>" defer></script>
+    <script src="audio-analyzer-integration.js?v=20251103_FINAL&ts=1730678400" defer></script>
     
     <!-- Inicializar Audio Analyzer -->
     <script>
