--- a/public/landing.html
+++ b/public/landing.html
@@ -1012,7 +1012,7 @@
     
     <!-- About Section -->
     <section class="section" id="about-intro" style="padding-top: 15px; padding-bottom: 30px; margin-top: 0;">
-        <h2 class="section-title scroll-reveal">O QUE É A SoundyAI?</h2>
+        <h2 class="section-title scroll-reveal">O que é a SoundyAI?</h2>
         <div class="about-text" style="max-width: 900px; margin: 0 auto; text-align: center;">
             <p style="font-size: 1.4rem; line-height: 1.9; color: var(--text-secondary); letter-spacing: 1px; text-shadow: 0 2px 10px rgba(0, 255, 255, 0.3);">
                 <strong style="color: var(--neon-cyan);">SoundyAI é uma plataforma inteligente que usa inteligência artificial para impulsionar a produtividade de produtores musicais.</strong> Usando IA, ela te ajuda a resolver problemas técnicos, aprender novas técnicas, tirar dúvidas e encontrar soluções rápidas para tudo o que envolve produzir música.
