planos userPlans css

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="ai-suggestions-expanded.css?v=20250922-expanded">
     <link rel="stylesheet" href="ai-suggestions-futuristic.css?v=20250923-cyberpunk">
     <link rel="stylesheet" href="ScoreFinal.css?v=20251021-futuristic">
+    <link rel="stylesheet" href="plan-mask-styles.css?v=20251211-reduced-mode">
     
     <!-- Fontes otimizadas -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;500;600&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
