planos userPlans css

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="ai-suggestions-futuristic.css?v=20250923-cyberpunk">
     <link rel="stylesheet" href="ScoreFinal.css?v=20251021-futuristic">
     <link rel="stylesheet" href="plan-mask-styles.css?v=20251211-reduced-mode">
+    <link rel="stylesheet" href="secure-render-styles.css?v=2.0.0">
     
     <!-- Fontes otimizadas -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;500;600&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
@@ -690,6 +691,8 @@
             forceActivate();
         });
     </script>
+    <!-- 🔒 Secure Render Utils - Sistema de Renderização Segura -->
+    <script src="/secure-render-utils.js?v=2.0.0" defer></script>
     <script src="/audio-analyzer-integration.js?v=NO_CACHE_FORCE&ts=20251103211830" defer></script>
     
     <!-- Inicializar Audio Analyzer -->
