--- a/public/index.html
+++ b/public/index.html
@@ -693,6 +693,8 @@
     </script>
     <!-- 🔒 Secure Render Utils - Sistema de Renderização Segura -->
     <script src="/secure-render-utils.js?v=2.0.0" defer></script>
+    <!-- 🔐 Reduced Mode Security Guard - Função Centralizada de Segurança -->
+    <script src="/reduced-mode-security-guard.js?v=1.0.0" defer></script>
     <script src="/audio-analyzer-integration.js?v=NO_CACHE_FORCE&ts=20251103211830" defer></script>
     
     <!-- Inicializar Audio Analyzer -->
