REDUCED PEDIR AJUDA A IA E PDF

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="ScoreFinal.css?v=20251021-futuristic">
     <link rel="stylesheet" href="plan-mask-styles.css?v=20251211-reduced-mode">
     <link rel="stylesheet" href="secure-render-styles.css?v=2.0.0">
+    <link rel="stylesheet" href="upgrade-modal-styles.css?v=20251213-modal">
     
     <!-- Fontes otimizadas -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;500;600&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
@@ -695,6 +696,8 @@
     <script src="/secure-render-utils.js?v=2.0.0" defer></script>
     <!-- 🔐 Reduced Mode Security Guard - Função Centralizada de Segurança -->
     <script src="/reduced-mode-security-guard.js?v=1.0.0" defer></script>
+    <!-- 🚀 Upgrade Modal Interceptor - Sistema de Bloqueio de Botões Premium -->
+    <script src="/upgrade-modal-interceptor.js?v=20251213" defer></script>
     <script src="/audio-analyzer-integration.js?v=NO_CACHE_FORCE&ts=20251103211830" defer></script>
     
     <!-- Inicializar Audio Analyzer -->
